<resources>
    <string name="app_name">SkyScanner</string>
    <string name="logo_text">संचार क्रांति योजना</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_tin_no">Tin No : </string>
    <string name="prompt_select_villages">Villages : </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login_short">Login</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Camera permissions are needed."
    </string>

    <string name="login">Login</string>
    <string name="search">Search</string>

    <string name="aadhar">Aadhaar</string>
    <string name="send">Send</string>
    <string name="camera">Camera</string>

    <string name="add_aadhar">Please Add Aadhar Details</string>
    <string name="add_img">Please Add Image</string>
    <string name="add_data">Please Add Data</string>
    <string name="add_smartcard">Please Add Smart Card Details</string>
    <string name="add_pds">Please Add PDS Details</string>
    <string name="add_mgn">Please Add Mgnrega Card Details</string>
    <string name="add_dob">Please Add DOB Details</string>

    <!--Dashboard-->
    <string name="title_activity_dashboard">Home</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_list">Search List</string>

    <string name="scan_info">Scan Information: </string>
    <string name="scan_validation">Please scan valid QR Code.</string>
    <string name="submit">Submit</string>
    <string name="uid">User ID: </string>
    <string name="name">Name: </string>
    <string name="gender">Gender:</string>
    <string name="yob">Year of birth:</string>
    <string name="co">CO:</string>
    <string name="house">House:</string>
    <string name="street">Street:</string>
    <string name="lm">Land Mark:</string>
    <string name="loc">Location:</string>
    <string name="vtc">VTC:</string>
    <string name="po">Post office:</string>
    <string name="dist">District:</string>
    <string name="subdist">Sub District:</string>
    <string name="state">State:</string>
    <string name="pc">Pin Code:</string>
    <string name="dob">Date of birth:</string>
    <string name="confirm_submition"> Do you want to submit this information?</string>
    <string name="required_all_fields">Please scan adhar card to submit information.</string>
    <string name="invalid_scan">Please scan valid adhar card.</string>


    <string name="no_connection">No Internet Connection!!</string>
    <string name="server_error">Please check you internet connectivity.</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_tin">Please Enter Tin no or fill the village.</string>
    <string name="no_net_confirmation">You don\'t have internet connection. Do you want to switch to other screen by saving data locally?</string>
    <string name="alert">Alert</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="server_error_occured">Server error occurred</string>
    <string name="server_no_data">No Data Found</string>
    <string name="exit_title">Exit</string>
    <string name="exit_conformation">Do you want to exit?</string>
    <string name="logout_title">Logout</string>
    <string name="logout_conformation">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="something_went_wrong">Something went wrong...Please try again.</string>
    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>
</resources>
