<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.sky.scanner.ui.search.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/prompt_tin_no" />

            <EditText
                android:id="@+id/enter_tin_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:imeOptions="actionNext"
                android:maxLength="29"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/prompt_select_villages" />

            <Spinner
                android:id="@+id/spinner_village_data"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="40dp"  />

        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:background="#000000"/>



    </LinearLayout>

</LinearLayout>
